fix slim label cutoff when bold

--- a/client/src/components/GORibbon/style.css
+++ b/client/src/components/GORibbon/style.css
@@ -1,5 +1,5 @@
 .ontology-ribbon {
-  margin-top: 50px;
+  margin-top: 62px;
   flex-wrap: nowrap;
 }
 
